Modify background color to black

--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("imagini/casinotable.jpg");
+    background-color: black;
     background-repeat: no-repeat;
     opacity: 1;
 }
